write onClick function

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "watch" : "webpack --watch"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "author": "Perizat",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "mini-css-extract-plugin": "^2.4.4",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -24,8 +25,10 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@babel/runtime": "^7.16.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
